--- a/package.json
+++ b/package.json
@@ -21,13 +21,35 @@
     "url": "https://github.com/paulomenin/gatsby-plugin-published"
   },
   "main": "index.js",
+  "files": [
+    "gatsby-node.js"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "peerDependencies": {
     "gatsby": "^4.0.0"
   },
   "dependencies": {
     "moment-timezone": "^0.5.34"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.5.1",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "jest": "^28.1.0",
+    "prettier": "2.6.2"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "./*.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "lines": 100
+      }
+    }
   }
 }
